--- a/package.json
+++ b/package.json
@@ -18,18 +18,32 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.76.1",
     "@payloadcms/next": "3.76.1",
     "@payloadcms/richtext-lexical": "3.76.1",
     "@payloadcms/ui": "3.76.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.564.0",
+    "motion": "^12.34.0",
     "next": "15.4.11",
     "payload": "3.76.1",
+    "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.1",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "19.2.1",
+    "recharts": "^3.7.0",
     "sharp": "0.34.2",
-    "@payloadcms/db-postgres": "3.76.1"
+    "styled-components": "^6.3.9",
+    "tailwind-merge": "^3.4.1",
+    "tailwindcss": "^4.1.18",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@playwright/test": "1.58.2",
@@ -42,7 +56,9 @@
     "eslint-config-next": "15.4.11",
     "jsdom": "28.0.0",
     "prettier": "^3.4.2",
+    "shadcn": "^3.8.5",
     "tsx": "4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "6.0.5",
     "vitest": "4.0.18"
