--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "framer-motion": "^12.34.0",
     "graphql": "^16.8.1",
     "lucide-react": "^0.564.0",
     "motion": "^12.34.0",
@@ -38,6 +39,7 @@
     "react": "19.2.1",
     "react-data-table-component": "^7.7.0",
     "react-dom": "19.2.1",
+    "react-icons": "^5.5.0",
     "recharts": "^3.7.0",
     "sharp": "0.34.2",
     "styled-components": "^6.3.9",
