--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL=mongodb://127.0.0.1/your-database-name
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/whatsapp-campaign
+N8N_CALLBACK_API_KEY=YOUR_N8N_API_KEY_HERE
